# $Id: Makefile.am 478 2007-04-11 19:10:47Z ckuethe $
INCLUDES = -I$(srcdir)/../../src
LDADD = ../../src/libgpstk.la

bin_PROGRAMS = rowcheck rmwcheck rnwcheck ficcheck ficacheck

rowcheck_SOURCES = rowcheck.cpp
rmwcheck_SOURCES = rmwcheck.cpp
rnwcheck_SOURCES = rnwcheck.cpp
ficcheck_SOURCES = ficcheck.cpp
ficacheck_SOURCES = ficacheck.cpp
