# $Id: Makefile.am 478 2007-04-11 19:10:47Z ckuethe $
INCLUDES = -I$(srcdir)/../../src
LDADD = ../../src/libgpstk.la

bin_PROGRAMS = rowdiff rnwdiff rmwdiff ephdiff ficdiff

rowdiff_SOURCES = rowdiff.cpp
rnwdiff_SOURCES = rnwdiff.cpp
rmwdiff_SOURCES = rmwdiff.cpp
ephdiff_SOURCES = ephdiff.cpp
ficdiff_SOURCES = ficdiff.cpp
