# $Id: Makefile.am 478 2007-04-11 19:10:47Z ckuethe $
INCLUDES = -I$(srcdir)/../../src
LDADD = ../../src/libgpstk.la

bin_PROGRAMS = mergeRinNav mergeRinObs mergeRinMet mergeFIC

mergeRinObs_SOURCES = mergeRinObs.cpp
mergeRinNav_SOURCES = mergeRinNav.cpp
mergeRinMet_SOURCES = mergeRinMet.cpp
mergeFIC_SOURCES = mergeFIC.cpp
